fix-spacing

--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -8,7 +8,7 @@
   letter-spacing: 5px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   padding-top: 3rem;
-  padding-bottom: 4rem;
+  padding-bottom: 2rem;
   @include mobile {
     padding-bottom: 0px;
   }
@@ -67,7 +67,7 @@
     }
 
     span {
-      font-size: 12px;
+      font-size: 14px;
       font-weight: 300;
       color: black;
       text-shadow: 2px 2px 4px rgba(215, 213, 213, 0.934);
