--- a/src/Components/Projects/project.scss
+++ b/src/Components/Projects/project.scss
@@ -17,7 +17,6 @@
   }
   .project-card {
     max-width: 1000px;
-    margin-top: 4rem;
     padding: 20px 0px 0px 20px;
     @include mobile {
       margin-top: 0;
